<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/toolsTop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="16dp"
        tools:listitem="@layout/card_post" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/toolsTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="content,save" />

    <EditText
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/content_hint"
        android:inputType="textMultiLine"
        android:background="@android:color/transparent"
        android:padding="@dimen/common_spacing"
        android:importantForAutofill="no"
        app:layout_constraintTop_toTopOf="@id/toolsTop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/save"
        app:layout_constraintStart_toStartOf="parent"
        />

    <ImageButton
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_post_like"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@drawable/ic_save_48"
        />







    <androidx.constraintlayout.widget.Group
        android:id="@+id/editGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:visibility="invisible"
        app:constraint_referenced_ids="edit,titleEdit,authorEdit,cancel" />


    <ImageView
        android:id="@+id/edit"
        android:layout_width="24dp"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:contentDescription="Edit"
        app:layout_constraintBottom_toTopOf="@+id/content"
        app:layout_constraintStart_toStartOf="@+id/list"
        app:srcCompat="@drawable/baseline_edit_24" />


    <TextView
        android:id="@+id/titleEdit"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:importantForAutofill="no"
        android:background="@android:color/white"
        android:text="@string/edit_message"
        app:layout_constraintBottom_toTopOf="@+id/authorEdit"
        app:layout_constraintEnd_toStartOf="@+id/cancel"
        app:layout_constraintStart_toEndOf="@+id/edit"
        app:layout_constraintTop_toTopOf="@+id/edit" />

    <TextView
        android:id="@+id/authorEdit"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:background="@android:color/white"
        android:importantForAutofill="no"

        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="@+id/edit"
        app:layout_constraintEnd_toStartOf="@+id/cancel"
        app:layout_constraintStart_toEndOf="@+id/edit" />

    <ImageButton
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:contentDescription="@string/cancel"
        app:layout_constraintBottom_toTopOf="@+id/content"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/baseline_cancel_24" />

</androidx.constraintlayout.widget.ConstraintLayout>