<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/common_spacing"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/posts_avatar_size"
        android:layout_height="@dimen/posts_avatar_size"
        android:contentDescription="@string/description_post_author_avatar"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/barrier"
        app:layout_constraintStart_toStartOf="parent"
        tools:srcCompat="@sample/posts.json/data/authorAvatar" />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/published"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@sample/posts.json/data/author" />

    <TextView
        android:id="@+id/published"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:layout_marginBottom="@dimen/common_spacing"
        app:layout_constraintTop_toBottomOf="@id/author"
        app:layout_constraintBottom_toBottomOf="@id/barrier"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        tools:text="@sample/posts.json/data/published" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu"
        style="@style/MenuStyle"
        android:layout_width="60sp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/common_spacing"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_post_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:icon="@drawable/baseline_more_vert_48" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar,published,menu"
        />

    <TextView
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/common_spacing"
        android:autoLink="web"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier"
        app:layout_constraintBottom_toTopOf="@id/barrierEndContent"
        tools:text="@sample/posts.json/data/content" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierEndContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="content" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/like"
        style="@style/LikeStyle"
        android:checkable="true"
        tools:checked="true"
        app:icon="@drawable/ic_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="10"
        android:background="@android:color/transparent"
        android:layout_marginVertical="@dimen/common_spacing"
        android:contentDescription="@string/description_favourite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrierEndContent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/share"
        style="@style/ShareStyle"
        app:icon="@drawable/baseline_share_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="10"
        android:background="@android:color/transparent"
        android:layout_marginHorizontal="@dimen/common_spacing"
        android:layout_marginVertical="@dimen/common_spacing"
        android:contentDescription="@string/description_share"
        app:layout_constraintBottom_toBottomOf="@id/like"
        app:layout_constraintStart_toEndOf="@id/like"
        app:layout_constraintTop_toTopOf="@id/like"
         />

    <TextView
        android:id="@+id/viewCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/common_spacing"
        app:layout_constraintBottom_toBottomOf="@id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/view"
        tools:text="@sample/posts.json/data/view" />

    <ImageView
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/common_spacing"
        android:layout_marginVertical="@dimen/common_spacing"
        android:contentDescription="@string/description_view"
        app:layout_constraintBottom_toBottomOf="@id/share"
        app:layout_constraintEnd_toStartOf="@id/viewCount"
        app:layout_constraintTop_toTopOf="@id/share"
        app:srcCompat="@drawable/baseline_remove_red_eye_24" />


</androidx.constraintlayout.widget.ConstraintLayout>